[project]
name = "ps-procesare-semnale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pooch>=1.8.2",
    "scipy>=1.11.0",
    "sounddevice>=0.4.6",
]
